[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Game/Obstacles/obstacle/Obstacle Deleted.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scenes/Game/Obstacles/Obstacles.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Game/Obstacles/Score.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Score"
tracks/0/type = "value"
tracks/0/path = NodePath("Score:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.498039 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Obstacles" type="Node2D"]
pause_mode = 1
script = ExtResource( 2 )

[node name="ObstacleDeleted" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Timers" type="Node2D" parent="."]

[node name="GenerationShedule" type="Timer" parent="Timers"]
pause_mode = 1
autostart = true

[node name="DifficultyChange" type="Timer" parent="Timers"]
pause_mode = 1
wait_time = 10.0
autostart = true

[node name="ColorChange" type="Timer" parent="Timers"]
autostart = true

[node name="Obstacles" type="Node2D" parent="."]

[node name="Score" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 160, 552 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Score = SubResource( 1 )

[connection signal="timeout" from="Timers/GenerationShedule" to="." method="_create_obstacle"]
[connection signal="timeout" from="Timers/DifficultyChange" to="." method="_increase_difficulty"]
[connection signal="timeout" from="Timers/ColorChange" to="." method="_on_ColorChange_timeout"]
